# PoR-Kernel-module-to-silence-as-control

./: AUDIT.md  CERTIFICATION.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  por_kernel_tests_visual.html  pyproject.toml  results.json  run_benchmark.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_issue.yml  feature_request.yml  integration_candidates.yml
.github/workflows/: auto_resonance.yml
Roadmap/: README.md
benchmarks/: README.md  dataset.json  results.json  run_benchmark.py
docs/: por_kernel.md  visual-test.html
examples/: __init__.py  agent_orchestration.py  ci_pipeline.py  langchain_integration.py  openai_integration.py
por_kernel/: __init__.py  attestation.py  cli.py  drift.py  kernel.py  metrics.py  silence.py
tests/: test_por_kernel.py
